--- a/html/changelog.html
+++ b/html/changelog.html
@@ -150,6 +150,8 @@
 			<ul class="changes bgimages16">
 				<li class="rscadd">Added printer sound for admins that plays when someone messages Centcomm or the Syndicate. Just like RP!</li>
 			</ul>
+				<li class="server">Fail2Topic now supports Linux. Do beware that this requires some sysop experience to properly set up!</li>
+				<li class="config">Fail2Topic is now disabled by default, and the out-of-the-box config files have been updated to be a little more detailed.</li>
 			<h3 class="author">Bhijn updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="admin">The traitor panel now actually shows a list of contractor targets.</li>
