--- a/tgui/packages/tgui/public/tgui.html
+++ b/tgui/packages/tgui/public/tgui.html
@@ -161,7 +161,7 @@ A fatal exception has occurred at 002B:C562F1B7 in TGUI.
 The current application will be terminated.
 Please remain calm. Get to the nearest NTNet workstation
 and send the copy of the following stack trace to:
-www.github.com/tgstation/tgstation. Thank you for your cooperation.
+github.com/Citadel-Station-13/Citadel-Station-13/issues. Thank you for your cooperation.
 </marquee>
 <div id="FatalError__stack" class="FatalError__stack"></div>
 <div class="FatalError__footer">
