--- a/html/changelog.html
+++ b/html/changelog.html
@@ -53,6 +53,7 @@
 			<h2 class="date">24 June 2020</h2>
 			<h3 class="author">DeltaFire15 updated:</h3>
 			<ul class="changes bgimages16">
+				<li class="balance">Choosing a random item in your uplink will no longer sometimes reroll your contract.</li>
 				<li class="rscdel">Syndicate crate event cannot fire as a random event anymore.</li>
 			</ul>
 			<h3 class="author">Detective-Google updated:</h3>
