--- a/html/changelog.html
+++ b/html/changelog.html
@@ -50,6 +50,91 @@
 		-->
 		<div class="commit sansserif">
 
+			<h2 class="date">25 June 2020</h2>
+			<h3 class="author">Anonymous updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Added kepi and orvilike kepi. Available through loadout.</li>
+			</ul>
+			<h3 class="author">Detective Google updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Medigygax</li>
+			</ul>
+			<h3 class="author">Detective-Google updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">malf AIs can no longer yeet the station while shunted</li>
+				<li class="bugfix">SMESes can now properly use self charging cells</li>
+				<li class="rscadd">ghosts now show up when the round ends</li>
+				<li class="balance">away missions</li>
+			</ul>
+			<h3 class="author">Funce updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Mentor SQL queries are now deleted properly.</li>
+			</ul>
+			<h3 class="author">Linzolle updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">analyze function on chem master is no longer broken</li>
+				<li class="bugfix">organs now decay inside dead bodies again</li>
+			</ul>
+			<h3 class="author">dapnee updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">wataur bottle item</li>
+				<li class="imageadd">wataur bottle and overlay</li>
+			</ul>
+
+			<h2 class="date">24 June 2020</h2>
+			<h3 class="author">DeltaFire15 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="balance">Choosing a random item in your uplink will no longer sometimes reroll your contract.</li>
+				<li class="rscdel">Syndicate crate event cannot fire as a random event anymore.</li>
+			</ul>
+			<h3 class="author">Detective-Google updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">singulos no longer succ infinite rods out of the ice</li>
+				<li class="bugfix">one of the directions for the diag hudpatch was blu instead of orang</li>
+			</ul>
+			<h3 class="author">timothyteakettle updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">bonfires/grills no longer produce infinite quantities of food</li>
+				<li class="bugfix">slime's alter form ability now updates their hair colour when changing their body colour</li>
+			</ul>
+
+			<h2 class="date">22 June 2020</h2>
+			<h3 class="author">Ghommie (porting PRs by zxaber, Ryll-Ryll, AnturK) updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Certain small items purchased through cargo now get grouped into a single box. They also are immune to the 10% private account fee.</li>
+				<li class="rscadd">Added single-order options for several existing products in the Cargo Catalog.</li>
+				<li class="tweak">Medkit listings are now single-pack items, and considered small items that get grouped into single boxes. Price for medkits is as close to unchanged as is reasonable.</li>
+				<li class="rscadd">You can now beat on vending machines to try and knock loose free stuff! You can also almost kill yourself doing it, so it's your call if your life is worth ten bucks.</li>
+				<li class="rscadd">Cigarette packets now have coupons on the back for small cargo items! Smoking DOES pay!</li>
+				<li class="tweak">Some single/small items in cargo have been rebranded as goodies, come in lockboxes rather than crates, and can only be purchased with private accounts.</li>
+			</ul>
+			<h3 class="author">kevinz000 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="refactor">Life() is split into BiologicalLife() and PhysicalLife. A component signal has been added that can prevent either from ticking.</li>
+			</ul>
+			<h3 class="author">shellspeed1 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Adds IV bags.</li>
+			</ul>
+
+			<h2 class="date">21 June 2020</h2>
+			<h3 class="author">kevinz000 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="balance">calculations for punch hit chance has been drastically buffed in favor of the attacker.</li>
+			</ul>
+
+			<h2 class="date">20 June 2020</h2>
+			<h3 class="author">LetterN updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Asset cache from tg</li>
+				<li class="tweak">Made the map viewer not look bad</li>
+				<li class="bugfix">Admin matrix right-bracket</li>
+			</ul>
+			<h3 class="author">bunny232 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscdel">Removed unsavory things from the vent clog event</li>
+			</ul>
+
 			<h2 class="date">19 June 2020</h2>
 			<h3 class="author">Bhijn updated:</h3>
 			<ul class="changes bgimages16">
@@ -59,9 +144,17 @@
 			<ul class="changes bgimages16">
 				<li class="bugfix">Square root circuit should now actually work.</li>
 			</ul>
+			<h3 class="author">SmArtKar updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Fixed my runtimes</li>
+			</ul>
 			<h3 class="author">TheSpaghetti updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">more insectoid insects</li>
+			</ul>
+			<h3 class="author">kevinz000 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">bay/polaris style say_emphasis has been added. You can now |italicize| _underline_ and +bold+ your messages.</li>
 			</ul>
 			<h3 class="author">timothyteakettle updated:</h3>
 			<ul class="changes bgimages16">
