--- a/html/changelog.html
+++ b/html/changelog.html
@@ -53,6 +53,8 @@
 			<h2 class="date">03 July 2020</h2>
 			<h3 class="author">Ghommie updated:</h3>
 			<ul class="changes bgimages16">
+				<li class="bugfix">Something went wrong with sandstorm changelogs</li>
+			</ul>
 			<h3 class="author">Arturlang updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="rscadd">You can now toggle hardsuit helmets from the strip menu</li>
