--- a/html/changelog.html
+++ b/html/changelog.html
@@ -50,9 +50,25 @@
 		-->
 		<div class="commit sansserif">
 
+			<h2 class="date">04 July 2020</h2>
+			<h3 class="author">Sonic121x updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">crushed Soldry sodacan</li>
+				<li class="rscadd">digitigrade version of chief medical officer's turtleneck and captain's female formal outfit.</li>
+			</ul>
+			<h3 class="author">silicons updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="refactor">blood_DNA["color"] is now a single variable instead of a list</li>
+			</ul>
+
 			<h2 class="date">03 July 2020</h2>
+			<h3 class="author">Arturlang updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">You can now toggle hardsuit helmets from the strip menu</li>
+			</ul>
 			<h3 class="author">Ghommie updated:</h3>
 			<ul class="changes bgimages16">
+				<li class="bugfix">fixed custom speech/tongue stuff.</li>
 				<li class="balance">Lowered shaft miners' paycheck, they have other ways to make cash.</li>
 				<li class="rscadd">You can't (un)equip garments on/from obscured inventory slots anymore.</li>
 				<li class="balance">The stamina cost multiplier for swinging melee weapons against mobs has been brought back to 1 from 0.8</li>
@@ -65,9 +81,22 @@
 				<li class="bugfix">r&d icons</li>
 				<li class="bugfix">chem master icons</li>
 			</ul>
+			<h3 class="author">Onule updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">titanium wall man good</li>
+			</ul>
+			<h3 class="author">Sonic121x updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Bringback the ChemMaster pill type button.</li>
+				<li class="bugfix">Fix Technode icon.</li>
+			</ul>
 			<h3 class="author">bunny232 updated:</h3>
 			<ul class="changes bgimages16">
 				<li class="tweak">Witchhunter hat no longer obscures mask ears ,eyes, face and mouth</li>
+			</ul>
+			<h3 class="author">timothyteakettle updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">bloodpacks initialise correctly now</li>
 			</ul>
 
 			<h2 class="date">02 July 2020</h2>
