--- a/html/changelog.html
+++ b/html/changelog.html
@@ -50,6 +50,22 @@
 		-->
 		<div class="commit sansserif">
 
+			<h2 class="date">07 July 2020</h2>
+			<h3 class="author">KasparoVy updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Fixes misaligned south-facing silver legwraps sprite.</li>
+			</ul>
+			<h3 class="author">Owai-Seek updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Bee Balm is now visible.</li>
+			</ul>
+			<h3 class="author">Weblure updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Fixed the slowdown formula for small character sprites; you guys don't use custom sprite sizes so just ignore these changes.</li>
+				<li class="bugfix">Fixed the "Move it to the threshold" button; it now does what it says.</li>
+				<li class="tweak">Reworded some text to be clearer.</li>
+			</ul>
+
 			<h2 class="date">05 July 2020</h2>
 			<h3 class="author">Ghommie updated:</h3>
 			<ul class="changes bgimages16">
@@ -71,7 +87,10 @@
 			</ul>
 			<h3 class="author">silicons updated:</h3>
 			<ul class="changes bgimages16">
+				<li class="tweak">active blocking now has a toggle keybind</li>
 				<li class="rscadd">auto bunker override verb has been added</li>
+				<li class="balance">shields take 2.5 stam instead of 3.5 stam per second to maintain block</li>
+				<li class="rscadd">Cybernetic implant shields will auto-extend and be used to block if the user has no item to block with</li>
 			</ul>
 			<h3 class="author">timothyteakettle updated:</h3>
 			<ul class="changes bgimages16">
