Go away changelog changes.

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -50,8 +50,6 @@
 		-->
 		<div class="commit sansserif">
 
-			<h2 class="date">18 July 2020</h2>
-			<h3 class="author">Arturlang updated:</h3>
 			<h2 class="date">19 July 2020</h2>
 			<h3 class="author">Arturlang updated:</h3>
 			<ul class="changes bgimages16">
@@ -209,7 +207,7 @@
 			</ul>
 			<h3 class="author">zeroisthebiggay updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="rscadd">TGUI 3.0 and enables all the UIs, plus the smart asset cache, and all the things required for them</li>
+				<li class="bugfix">a singular stray pixel</li>
 			</ul>
 
 			<h2 class="date">11 July 2020</h2>
